--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Garden Gatherer</string>
+    <string name="image_of_seedling">Image of seedling</string>
+    <string name="log_in">Log In</string>
 </resources>
