Figured out why all gardens weren't loading. item_garden_list.xml had height as match parent! Whoops.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="garden_size_hint">1 x 2 m</string>
     <string name="lighting">Lighting:</string>
     <string name="view_all_gardens">View All Gardens</string>
+    <string name="view_garden">View Garden</string>
     <string-array name="months">
         <item>January</item>
         <item>February</item>
