Working on including the back option in the action bar instead of as extended FAB buttons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="garden_notes_example">Exposed to the elements. Needs extra watering.</string>
     <string name="unavailable">Unavailable</string>
     <string name="sort_items">Sort items</string>
+    <string name="more">More</string>
     <string-array name="months">
         <item>January</item>
         <item>February</item>
